hphp/hack/test/typecheck/lambda/variadics/variadic_method_not_found.php.exp
File "variadic_method_not_found.php", line 19, characters 21-23:
No method 'foo' in D (did you mean 'bar'?) (Typing[4053])
File "variadic_method_not_found.php", line 10, characters 36-36:
This is why I think it is an object of type D
File "variadic_method_not_found.php", line 3, characters 7-7:
Declaration of D is here
File "variadic_method_not_found.php", line 25, characters 21-23:
No method 'foo' in D (did you mean 'bar'?) (Typing[4053])
File "variadic_method_not_found.php", line 24, characters 19-20:
This is why I think it is an object of type D (variadic argument)
File "variadic_method_not_found.php", line 3, characters 7-7:
Declaration of D is here
File "variadic_method_not_found.php", line 29, characters 38-40:
No method 'foo' in D (did you mean 'bar'?) (Typing[4053])
File "variadic_method_not_found.php", line 10, characters 36-36:
This is why I think it is an object of type D
File "variadic_method_not_found.php", line 3, characters 7-7:
Declaration of D is here
File "variadic_method_not_found.php", line 31, characters 40-42:
No method 'foo' in D (did you mean 'bar'?) (Typing[4053])
File "variadic_method_not_found.php", line 31, characters 25-26:
This is why I think it is an object of type D (variadic argument)
File "variadic_method_not_found.php", line 3, characters 7-7:
Declaration of D is here
File "variadic_method_not_found.php", line 36, characters 35-37:
No method 'foo' in D (did you mean 'bar'?) (Typing[4053])
File "variadic_method_not_found.php", line 36, characters 20-21:
This is why I think it is an object of type D (variadic argument)
File "variadic_method_not_found.php", line 3, characters 7-7:
Declaration of D is here
File "variadic_method_not_found.php", line 44, characters 19-21:
No method 'foo' in D (did you mean 'bar'?) (Typing[4053])
File "variadic_method_not_found.php", line 43, characters 29-30:
This is why I think it is an object of type D (variadic argument)
File "variadic_method_not_found.php", line 3, characters 7-7:
Declaration of D is here
